--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "@angular/platform-browser": "^7.2.6",
     "@angular/platform-browser-dynamic": "^7.2.6",
     "@angular/router": "^7.2.6",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/entity": "^7.2.0",
+    "@ngrx/schematics": "^7.2.0",
+    "@ngrx/store": "^7.2.0",
+    "@ngrx/store-devtools": "^7.2.0",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
     "tslib": "^1.9.0",
